<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tribe9.origin.MainActivity">

    <ImageView
        style="@style/logo"
        android:contentDescription="@string/tribe9_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/t9logo" />

    <TextView

        style="@style/header"
        android:text="@string/business_name"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView

            style="@style/description"
            android:text="@string/business_description" />
    </ScrollView>
    <!-- Phone 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView


            style="@style/icons"
            android:src="@drawable/ic_phone_black_24dp"


            />


        <TextView
            style="@style/contacts"
            android:text="@string/tel_number_1"
            />


    </LinearLayout>

    <!--Phone 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView

            style="@style/icons"

            android:src="@drawable/ic_phone_black_24dp"


            />

        <TextView
            style="@style/contacts"
            android:text="@string/tel_number_2"
            />


    </LinearLayout>

    <!-- Email View -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView

            style="@style/icons"
            android:src="@drawable/ic_email_black_24dp"


            />

        <TextView

            style="@style/contacts"
            android:text="@string/business_email"
            android:autoLink="email"
            />

    </LinearLayout>


    <!-- Business Address-->

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            style="@style/icons"

            android:src="@drawable/ic_map_black_24dp"

            />

        <TextView

            style="@style/contacts"
            android:text="@string/business_address" />

    </LinearLayout>


</LinearLayout>
